--- a/css/main.css
+++ b/css/main.css
@@ -1036,7 +1036,7 @@ h1, h2, h3, h4, h5 {
 }
 .services-list li {
   position: relative;
-  margin: 10px 0;
+  margin: 12px 0;
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 40px;
@@ -1050,4 +1050,24 @@ h1, h2, h3, h4, h5 {
   position: absolute;
   top: 1px;
   left: 0;
+}
+
+.partners {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-color: var(--gray-200);
+  position: relative;
+  z-index: -1;
+}
+.partners__title .title__big {
+  color: var(--white);
+}
+
+.partners-slider__thumb {
+  background-color: var(--white);
+  text-align: center;
+  padding: 20px 10px;
+}
+.partners-slider__link {
+  display: block;
 }
