--- a/css/main.css
+++ b/css/main.css
@@ -645,8 +645,7 @@ progress {
   --body-color: #232323;
   --outline: 2px dashed currentColor;
   --outline-offset: 3px;
-  --transition: color 0.3s ease, border-color 0.3s ease,
-    background-color 0.3s ease;
+  --transition: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
 }
 
 *,
@@ -732,6 +731,49 @@ h1, h2, h3, h4, h5 {
   height: auto;
 }
 
+.burger {
+  display: none;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  z-index: 20;
+}
+.burger__line {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 3px;
+  border-radius: 4px;
+  background-color: var(--white);
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+}
+.burger__line:first-child {
+  top: 4px;
+}
+.burger__line:nth-child(2) {
+  top: 50%;
+  transform: translateY(-50%);
+}
+.burger__line:nth-child(3) {
+  top: calc(100% - 7px);
+}
+.burger--active .burger__line:nth-child(2) {
+  transform: scale(0);
+}
+.burger--active .burger__line:first-child {
+  top: 50%;
+  transform: rotate(45deg);
+}
+.burger--active .burger__line:last-child {
+  top: 50%;
+  transform: rotate(-45deg);
+}
+@media (max-width: 991.98px) {
+  .burger {
+    display: block;
+  }
+}
+
 .btn {
   display: inline-flex;
   align-items: center;
@@ -776,13 +818,14 @@ h1, h2, h3, h4, h5 {
 }
 
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
-  border-bottom: 2px solid rgba(var(--white-rgb), 0.2);
-  padding-top: 6px;
-  padding-bottom: 6px;
-  width: 100%;
   z-index: 10;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease, border-bottom-color 0.3s ease, padding 0.3s ease;
+  border-bottom: 2px solid rgba(var(--white-rgb), 0.2);
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 100%;
 }
 .header__container {
   display: flex;
@@ -790,8 +833,15 @@ h1, h2, h3, h4, h5 {
   align-items: center;
   gap: var(--gap);
 }
+.header__logo {
+  position: relative;
+  z-index: 20;
+}
 .header__logo img {
   display: block;
+}
+.header__nav .nav__link::after {
+  top: calc(100% + 20px);
 }
 .header__phone {
   position: relative;
@@ -808,6 +858,26 @@ h1, h2, h3, h4, h5 {
   height: 2px;
   content: "";
 }
+.header--scrolled {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  border-bottom-color: #151515;
+  background-color: #151515;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+.header--scrolled .header__nav .nav__link::after {
+  top: calc(100% + 14px);
+}
+@media (max-width: 991.98px) {
+  .header__phone {
+    margin-left: auto;
+  }
+}
+@media (max-width: 575.98px) {
+  .header__phone {
+    display: none;
+  }
+}
 
 .nav__list {
   display: flex;
@@ -820,19 +890,19 @@ h1, h2, h3, h4, h5 {
 .nav__link {
   display: block;
   position: relative;
-  padding: 8px 0;
-  color: rgba(var(--white-rgb), 0.8);
   transition: color 0.3s ease;
+  padding: 8px 0;
+  color: rgba(var(--white-rgb), 0.96);
 }
 .nav__link::after {
   position: absolute;
+  top: 100%;
   left: 0;
-  top: calc(100% + 14px);
-  content: "";
+  transition: width 0.3s ease;
+  background-color: var(--primary-color);
   width: 0;
   height: 2px;
-  background-color: var(--primary-color);
-  transition: width 0.3s ease;
+  content: "";
 }
 @media (any-hover: hover) {
   .nav__link:hover {
@@ -840,6 +910,45 @@ h1, h2, h3, h4, h5 {
   }
   .nav__link:hover::after {
     width: 100%;
+  }
+}
+@media (max-width: 991.98px) {
+  .nav {
+    position: fixed;
+    transform: translateX(-100%);
+    visibility: hidden;
+    z-index: 15;
+    transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    inset: 0;
+    padding: 90px var(--container-offset) 20px var(--container-offset);
+    overflow-y: auto;
+    font-size: 28px;
+  }
+  .nav::before {
+    position: absolute;
+    z-index: -1;
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    inset: 0;
+    background-color: rgba(var(--black-rgb), 0.9);
+    height: 100vh;
+    content: "";
+  }
+  .nav--active {
+    transform: none;
+    visibility: visible;
+  }
+  .nav__list {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+.nav__link::after {
+  display: none;
+}
+@media (any-hover: hover) {
+  .nav__link:hover {
+    color: var(--primary-color);
   }
 }
 
@@ -899,6 +1008,8 @@ h1, h2, h3, h4, h5 {
   transition: transform 6s ease;
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .hero-slider .swiper-slide-active .hero-slider__img {
   transform: scale(1.1);
@@ -1159,4 +1270,21 @@ h1, h2, h3, h4, h5 {
   display: flex;
   justify-content: space-between;
   gap: 10px 30px;
+}
+.scrollup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 48px;
+  height: 48px;
+  background-color: var(--black);
+  z-index: 5;
+  cursor: pointer;
+  line-height: 42px;
+  text-align: center;
+}
+.scrollup__icon {
+  color: var(--primary-color);
+  width: 28px;
+  height: 28px;
 }
