--- a/css/main.css
+++ b/css/main.css
@@ -942,11 +942,11 @@ h1, h2, h3, h4, h5 {
     flex-direction: column;
     gap: 10px;
   }
+  .nav__link::after {
+    display: none;
+  }
 }
-.nav__link::after {
-  display: none;
-}
-@media (any-hover: hover) {
+@media (max-width: 991.98px) and (any-hover: hover) {
   .nav__link:hover {
     color: var(--primary-color);
   }
