--- a/css/main.css
+++ b/css/main.css
@@ -1324,7 +1324,7 @@ h1, h2, h3, h4, h5 {
   font-size: 16px;
 }
 .footer__bottom a {
-  color: #6b6b6b;
+  color: #797979;
 }
 .footer__bottom-container {
   display: flex;
