--- a/css/main.css
+++ b/css/main.css
@@ -1320,11 +1320,11 @@ h1, h2, h3, h4, h5 {
 .footer__bottom {
   background-color: #151515;
   padding: 15px 0;
-  color: #626262;
+  color: #9b9b9b;
   font-size: 16px;
 }
 .footer__bottom a {
-  color: #797979;
+  color: #b5b5b5;
 }
 .footer__bottom-container {
   display: flex;
